--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,14 @@
 <head>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="index.css" />
+
 </head>
 
 <body>
+
   <!-- Logo -->
   <div class="img">
-    <img src="icon.png" alt="Logo" width="160"></img>
+    <img src="icon.png" alt="Logo" width="160" draggable="false"></img>
   </div>
 
   <div id="popup-content">
@@ -65,7 +67,8 @@
     <div class="box">
       <b id="status" class="status">Loading...</b>
     </div>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
+
 </body>
 
 </html>
