--- a/public/index.html
+++ b/public/index.html
@@ -15,57 +15,53 @@
     <img src="icon.png" alt="Logo" width="160" draggable="false"></img>
   </div>
 
-  <div id="popup-content">
-
-    <!-- trader mode switch -->
-    <div class="ButtonName"><b>Trader mode</b><sup> <span
-          title="While active, the buy assistant will automatically click the buttons on page entrance when buying a specific moment"
-          style="cursor: pointer;">(i)</span>
-      </sup>
-    </div>
-    <div class="box">
-      <label id="traderToggle" class="switch">
-        <input id="traderCheckBox" type="checkbox" />
-        <span class="slider round"></span>
-      </label>
-    </div>
-    </br> </br> </br>
-
-    <!-- rage switch -->
-    <div class="ButtonName"> <b>Rage mode </b><sup> <span
-          title="While active, the buy assistant will automatically buy the moment if available"
-          style="cursor: pointer;">(i)</span></sup>
-    </div>
-    <div class="box">
-      <label id="rageToggle" class="switch">
-        <input id="rageCheckBox" type="checkbox" />
-        <span class="slider round"></span>
-      </label>
-    </div> </br></br></br>
-
-    <!-- memo field -->
-    <div class="ButtonName">
-      <b>Memo for WAX</b>
-      <sup> <span title="Please donate any amount of WAX to yznbq.wam with the given memo."
-          style="cursor: pointer;">(i)</span></sup>
-      </br>
-      <b class="address">Address: yznbq.wam</b>
-    </div>
-
-    <div class="box">
-      <b id="waxText" class="text"></b>
-    </div>
-    </br></br></br></br>
-
-    <!-- Status field -->
-    <div>
-      <div class="ButtonName">
-        <b>Status</b>
+  <div id="content">
+    <div class="container">
+      <div class="row">
+        <div class="ButtonName pointer">
+          <b>Trader mode</b>
+        </div>
+        <label id="traderToggle" class="switch">
+          <input id="traderCheckBox" type="checkbox" />
+          <span class="slider round"></span>
+        </label>
+      </div>
+      <div class="row">
+        <div class="ButtonName pointer">
+          <b>Rage mode </b>
+        </div>
+        <div class="box">
+          <label id="rageToggle" class="switch">
+            <input id="rageCheckBox" type="checkbox" />
+            <span class="slider round"></span>
+          </label>
+        </div>
       </div>
     </div>
 
-    <div class="box">
-      <b id="status" class="status">Loading...</b>
+    <!-- memo field -->
+    <div class="container">
+      <div class="container">
+
+        <div class="row">
+          <div class="ButtonName">
+            <b>Memo for WAX</b>
+            <sup> <span title="Please donate any amount of WAX to yznbq.wam with the given memo."
+                style="cursor: pointer;">(i)</span></sup>
+            <b class="address">Address: yznbq.wam</b>
+          </div>
+
+        </div>
+        <b id="waxText" class="text">blub</b>
+      </div>
+
+      <!-- Status field -->
+      <div class="row">
+        <div class="ButtonName">
+          <b>Status</b>
+        </div>
+        <b id="status" class="status">Loading...</b>
+      </div>
     </div>
     <script src="./index.js"></script>
 
