need to browserify

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
   <!-- Logo -->
   <div class="img">
-    <img src="icon.png" alt="Logo" width="160" draggable="false"></img>
+    <img src="icon.png" alt="Logo" width="160" draggable="false"/>
   </div>
 
   <div id="content">
@@ -52,7 +52,7 @@
           </div>
 
         </div>
-        <b id="waxText" class="text">blub</b>
+        <b id="waxText" class="text"></b>
       </div>
 
       <!-- Status field -->
@@ -63,7 +63,7 @@
         <b id="status" class="status">Loading...</b>
       </div>
     </div>
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
 
 </body>
 
